--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -45,25 +45,18 @@ body {
 </head>
 <body>
 <div class="topnav">
-	<a href="#">Registrar especie</a>
-	<a href="#">Listar especies</a>
-	<a href="#">Listar especie por ID</a>
-	<a href="#">Editar especie</a>
-	<a href="#">Eliminar especie</a>
+	<a href="home">Inicio</a>
+	<a href="especies/">Index especies</a>
+	<a href="especies/registrar">Registrar especie</a>
+	<a href="especies/listarEspecies">Listar especies</a>
+	<a href="especies/listarEspeciePorGuid">Listar especie por ID</a>
 </div>
 
 <h1>Pandemics</h1>
 <h3>Registro de patentes biológicas</h3>
 
-<div>
-	<ul>
-		<li><a href="#">Registrar especie</a></li>
-		<li><a href="#">Listar especies</a></li>
-		<li><a href="#">Listar especie por ID</a></li>
-		<li><a href="#">Editar especie</a></li>
-		<li><a href="#">Eliminar especie</a></li>
-	</ul>
-</div>
+<a href="especies">Control de patentes</a>
+
 
 </body>
 </html>
