--- a/src/main/resources/templates/ListarEspecies.html
+++ b/src/main/resources/templates/ListarEspecies.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
 
+<head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<title>Pandemics - Especies</title>
+<title>Especies registradas</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <style>
 body {
@@ -40,27 +40,53 @@ body {
   color: white;
 }
 </style>
-
 </head>
+
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+
 <body>
 <div class="topnav">
 	<a href="../home">Inicio</a>
-	<a href="especies">Index especies</a>
-	<a href="especies/registrar">Registrar especie</a>
-	<a href="especies/listarEspecies">Listar especies</a>
-	<a href="especies/listarEspeciePorGuid">Listar especie por ID</a>
+	<a href="../especies">Index especies</a>
+	<a href="registrar">Registrar especie</a>
+	<a href="listarEspecies">Listar especies</a>
+	<a href="listarEspeciePorGuid">Listar especie por ID</a>
 </div>
 
-<h1>Pandemics Spices</h1>
-
-<div>
-	<ul>
-		<li><a href="especies/registrar">Registrar especie</a></li>
-		<li><a href="especies/listarEspecies">Listar especies</a></li>
-		<li><a href="especies/listarEspeciePorGuid">Listar especie por ID</a></li>
-
-	</ul>
-</div>
-
+<body>  
+    	    
+    <table>    
+    <tr>
+		<th>Nombre</th>
+		<th>Descubierto</th>
+		<th>Tipo</th>		
+		<th>Fecha registro</th>
+	</tr>    
+    <th:block  th:each="especie : ${especies}">		    
+	<tr> 
+		<td th:text="${especie.nombre}">Nombre</td>
+		<td th:text="${especie.descubierto}">Descubierto</td>
+		<td th:text="${especie.tipo}">Tipo</td>
+		<td th:text="${especie.fecha}">Fecha registro</td>              
+	</tr>
+	</th:block>
+    </table> 
+    
 </body>
 </html>
