validations,fixes in views,move all under services

--- a/src/main/resources/templates/Editar.html
+++ b/src/main/resources/templates/Editar.html
@@ -73,6 +73,11 @@ body {
 	    GUID: <input type="text" name="guid" th:field="*{guid}" readonly>		
 		</tr>
 		</br>
+		
+	    <tr>
+	    UUID: <input type="text" name="uuid" th:field="*{uu_id}" readonly>		
+		</tr>
+		</br>
 			    	  		      
 	    <tr>
 	    Nombre: <input type="text" name="nombre" th:field="*{nombre}" required>		
