--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -46,7 +46,7 @@ body {
 <body>
 <div class="topnav">
 	<a href="home">Inicio</a>
-	<a href="especies/">Index especies</a>
+	<a href="especies">Index especies</a>
 	<a href="especies/registrar">Registrar especie</a>
 	<a href="especies/listarEspecies">Listar especies</a>
 	<a href="especies/listarEspeciePorGuid">Listar especie por ID</a>
