table name header fixes

--- a/src/main/resources/templates/ListarEspecie.html
+++ b/src/main/resources/templates/ListarEspecie.html
@@ -71,6 +71,8 @@ tr:nth-child(even) {
 <body>    	    
     <table>    
     <tr>
+		<th>GUID</th>
+		<th>UUID</th>     
 		<th>Nombre</th>
 		<th>Descubierto</th>
 		<th>Tipo</th>		
