add rest controller

--- a/src/main/resources/templates/Especies.html
+++ b/src/main/resources/templates/Especies.html
@@ -51,14 +51,13 @@ body {
 	<a href="especies/listarEspeciePorGuid">Listar especie por ID</a>
 </div>
 
-<h1>Pandemics Spices</h1>
+<h1>Pandemics</h1>
 
 <div>
 	<ul>
 		<li><a href="especies/registrar">Registrar especie</a></li>
 		<li><a href="especies/listarEspecies">Listar especies</a></li>
 		<li><a href="especies/listarEspeciePorGuid">Listar especie por ID</a></li>
-
 	</ul>
 </div>
 
